--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
         "lint:fix": "eslint src/ --fix",
         "format": "prettier --write src/",
         "seed": "node scripts/seed.js",
+        "seed:admin": "node scripts/seed-admin.js",
+        "create:admin": "node scripts/create-admin.js",
         "migrate": "node scripts/migrate.js"
     },
     "keywords": [],
